Wed Jul  4 05:11:57 2007  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (set_relation): added.

Wed Jul  4 04:58:30 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (caller_setup_args): fix to show correct class
	  on an error message (ex: m(&1)). [ruby-dev:31101]

Wed Jul  4 04:30:32 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_array, iseq_compile_each): fix about array
	  generation in void context. [ruby-dev:31102]

	* bootstraptest/test_literal.rb: add a test for above.

Wed Jul  4 04:07:00 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_array): ignore NODE_ZARRAY.
	  [ruby-dev:31110]

	* bootstraptest/test_method.rb: add a test for above.

Wed Jul  4 04:04:02 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.h: fix debug print level.

Wed Jul  4 03:52:55 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each): support v[&b]= type method call.
	  [ruby-dev:31094]

	* bootstraptest/test_method.rb: add a test for above.

Wed Jul  4 03:43:29 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (compile_massign): fix massign compilation
	  (example: a, *v, (*x) = ...).  [ruby-dev:31107]

	* bootstraptest/test_massign.rb: add tests for above.

Tue Jul  3 23:12:29 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/onigiruma.h (ONIG_EXTERN): use RUBY_EXTERN if defined.

	* regenc.h: include ruby/defines.h.

	* regint.h: x64-mswin64 support.

Tue Jul  3 13:47:44 2007  Koichi Sasada  <ko1@atdot.net>

	* cont.c (cont_save_machine_stack): clear saved_thread.machine_stack*.

Mon Jul  2 21:45:53 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c: rename iseq_translate_direct_threaded_code()
	  to iseq_translate_threaded_code().

	* eval_intern.h, yarvcore.h: mv EXEC_EVENT_HOOK() and
	  exec_event_hooks() to yarvcore.h.

	* insnhelper.ci, vm.c: mv yarv_finish_insn_seq to vm.c.

	* insns.def (opt_call_c_function): fix to use RESTORE_REGS().

	* iseq.c (rb_iseq_build_for_ruby2cext): fix to allocate iseq.
